force-app/main/default/objects/Lender_Deal__c/Lender_Deal__c.object-meta.xml
<CustomObject>
    <label>Lender Deal</label>
    <nameField>
        <label>Lender Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lender Deals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>