force-app/main/default/objects/Lender_Deal__c/fields/Anticipated_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Closing_Date__c</fullName>
    <description>Date that CoreVest anticipates purchasing these Loans</description>
    <inlineHelpText>Date that CoreVest anticipates purchasing these Loans</inlineHelpText>
    <label>Anticipated Closing Date</label>
    <type>Date</type>
</CustomField>