force-app/main/default/objects/Lender_Deal__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <label>Lender</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lender Deals</relationshipLabel>
    <relationshipName>Lender_Loan_Tapes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>