force-app/main/default/objects/Lender_Deal__c/fields/Number_of_Loans__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Loans__c</fullName>
    <description>Number of Loans included in this Tape</description>
    <inlineHelpText>Number of Loans included in this Tape</inlineHelpText>
    <label># of Loans</label>
    <summaryForeignKey>Lender_Deal_to_Deal__c.Lender_Deal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>