force-app/main/default/objects/Lender_Deal__c/fields/Number_of_Loans_Bid_On_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Loans_Bid_On_Purchased__c</fullName>
    <description>This is a count of the Loans being bid on or purchased</description>
    <inlineHelpText>This is a count of the Loans being bid on or purchased</inlineHelpText>
    <label># of Loans Bid On/Purchased</label>
    <summaryFilterItems>
        <field>Lender_Deal_to_Deal__c.Status__c</field>
        <operation>equals</operation>
        <value>Bid, Purchase</value>
    </summaryFilterItems>
    <summaryForeignKey>Lender_Deal_to_Deal__c.Lender_Deal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>