force-app/main/default/objects/Lender_Deal__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <description>Date that the Loans in this Lender Deal were purchased</description>
    <inlineHelpText>Date that the Loans in this Lender Deal were purchased</inlineHelpText>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>