force-app/main/default/objects/Lender_Deal__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Review</fullName>
            </value>
            <value>
                <fullName>Pricing Review</fullName>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>