force-app/main/default/objects/Lender_Deal__c/fields/Total_Bid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Bid_Amount__c</fullName>
    <label>Total Bid Amount</label>
    <summarizedField>Lender_Deal_to_Deal__c.Bid_Amount__c</summarizedField>
    <summaryForeignKey>Lender_Deal_to_Deal__c.Lender_Deal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>