force-app/main/default/objects/Lender_Deal__c/recordTypes/Bridge_Loans.recordType-meta.xml
<RecordType>
    <fullName>Bridge_Loans</fullName>
    <active>true</active>
    <label>Bridge Loans</label>
</RecordType>