force-app/main/default/objects/Lender_Deal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lender__c</columns>
    <columns>Stage__c</columns>
    <columns>Number_of_Loans__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>